<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!-- 应用名字 -->
    <string name="app_name">立马好汽车票</string>

    <!-- 退出登录 -->
    <string name="press_again_exit">再按一次退出</string>
    
    <!-- 引导界面-->
	<string name="guide_start">进行购票</string>
	<!--include 字符  -->
	<string name="include_person_txt">个人信息</string>
	<string name="include_back">返回</string>
	<string name="include_home_txt">立马好汽车票</string>
	<string name="include_station_search_txt">选择到达地</string>
	<string name="include_tick_query_detail_txt">车票详情</string>
	<string name="include_tick_order_pay_txt">支付方式</string>
	<string name="include_tick_pay_success_txt">支付成功</string>
	<string name="include_tick_websit_txt">周边购票网点</string>
	<string name="include_tick_websit_location_txt">定位</string>
	<string name="include_login_txt">用户登录</string>
	<string name="include_register_txt">注册</string>
	<string name="include_alterpwd_txt">找回密码</string>
	<string name="include_ticket_order">车票订单</string>
	<string name="include_ticket_order_detia">订单详情</string>
	<string name="include_account_txt">我的账号</string>
	<string name="include_personinfo_txt">我的资料</string>
	<string name="include_alter_password_txt">修改密码</string>
	<string name="include_bind_phone_txt">修改手机号</string>

	<!--tabs 字符  -->
	<string name="tabs_home">主页</string>
	<string name="tabs_person">个人</string>
	<string name="tabs_more">更多</string>
	
	<!-- 菜单栏 -->
	<string name="home_memu_ticket_query">车票查询</string>
	<string name="home_memu_ticket_website">周边购票网点</string>
	<string name="person_information">我的资料</string>
	<string name="person_account">我的账号</string>
	<string name="person_ticket_order">车票订单</string>
	
	<!--home 字符  -->
	<string name="home_departure_txt">出发地</string>
	<string name="home_destination_txt">到达地</string>
	<string name="home_destination_empty_txt">请先选择到达地</string>
	<string name="home_destination_select">点击选择</string>
	<string name="home_date_txt">日&#160;&#160;&#160;&#160;期</string>
	<string name="home_search_txt">查询</string>
	<string name="departure_txt">杭州</string>
	
	<string name="home_get_predate">获取预售票信息</string>
	
	<!--更多  字符  -->
	<string name="sofe_vode">软件版本</string>
	<string name="about_lmh">关于立马好汽车票</string>
	<string name="user_guide">用户指南</string>
	<string name="user_disclaimer">免责声明</string>
	<string name="user_feedback">意见反馈</string>
	<string name="user_update">检查更新</string>
	<string name="contact_number_txt">联系电话</string>
	<string name="contact_number">400-101-9900</string>
	<string name="vode_num">V3.7</string>
	
	<!-- 车票 查询 字符 -->
	<string name="ticker_query_before">前一天</string>
	<string name="ticker_query_after">后一天</string>
	<string name="ticker_query_filter">筛选</string>
	<!-- 车票 查询 详情字符 -->
	<string name="ticker_query_detail_servicecash">服务费\n%s元/张</string>
	<string name="ticker_query_detail_bustype">车型：%s</string>
	<string name="ticker_query_detail_price">￥%s</string>
	<string name="ticker_query_detail_mileage">%s公里</string>
	<string name="ticker_query_detail_price_title">票价：</string>
	<string name="ticker_query_detail_surplus_title">余票：</string>
	<string name="ticker_query_detail_mileage_title">里程：</string>
	<string name="ticker_query_detail_totalp_title">票价合计</string>
	<string name="ticker_query_detail_total_title">总计(含服务费)</string>
	<string name="ticker_query_detail_phone_hint">请输入手机号</string>
	<string name="ticker_query_detail_buy">立即购买</string>
	<string name="ticker_query_detail_presentation">温馨提示</string>
	<string name="ticker_query_detail_pre_content">1、本APP不办理退票、特票及儿童\n&#160;&#160;&#160;&#160;&#160;&#160;票，如需办理退票，请前往各始\n&#160;&#160;&#160;&#160;&#160;&#160;发车站办理；\n\n2、如遇扣款成功、购票失败，请致\n&#160;&#160;&#160;&#160;&#160;&#160;电客服，我们将在5个工作日内\n&#160;&#160;&#160;&#160;&#160;&#160;返还您的票款；\n\n3、如需报销凭证、请至始发车站服\n&#160;&#160;&#160;&#160;&#160;&#160;务台办理；</string>
	<string name="ticker_query_detail_confirm_buy">确定购买</string>
	<!-- 车票订单支付 -->
	<string name="ticker_order_pay_total_title">总计：</string>
	<string name="ticker_order_pay_orderno_title">订单编号：</string>
	<string name="ticker_order_pay_timecount_title">剩余支付时间</string>
	<string name="ticket_order_leave_date_title">乘车时间：</string>
	<string name="ticker_order_num_title">订单编号：</string>
	<string name="ticker_order_pay_num_title">票数：</string>
	<!-- 车票订单支付 -->
	<string name="ticker_pay_success_detail">查看订单详情</string>
	<string name="ticker_pay_success_suc">恭喜您，支付成功</string>
	<!-- 车票订单 详情 -->
	<string name="ticket_order_detial_pwd">取票密码：</string>
	<string name="ticket_order_detial_pay">未支付订单</string>
	<string name="ticker_order_detail_pay_buy">立即支付</string>
	<string name="ticket_order_detial_fail">订票失败</string>
	<string name="ticket_order_detial_exception">订票异常</string>
	<string name="ticket_order_detial_succes">订票成功</string>
	<string name="ticker_pay_success_time">%s秒后 自动跳转</string>
	<string name="ticker_pay_success_riding_time">乘车时间：</string>
	<string name="ticker_pay_success_train_number">&#160;&#160;&#160;&#160;车次：</string>
	<string name="ticker_pay_success_ticket_entrance">检票口：</string>
	<string name="ticker_pay_success_seat_number">座号：</string>
	
	
	<!--登录 注册 找回密码 字符  -->
	<string name="login_user_phone">手机号</string>
	<string name="login_user_phone_hint">请输入手机号</string>
	<string name="login_alter_phone_hint">请输入注册时的手机号码</string>
	<string name="login_user_password">密码</string>
	<string name="login_user_reg_password">密&#160;&#160;&#160;&#160;码</string>
	<string name="login_user_password_hint">请输入密码</string>
	<string name="login_new_password">新密码</string>
	<string name="login_ensure_password">密码确认</string>
	<string name="login_forget_password">忘记密码</string>
	<string name="login_tv_txt">登录</string>
	<string name="login_error_require_phone_number">手机号码不能为空</string>
	<string name="login_error_username">手机号码输入有误，请重新输入</string>
	<string name="login_error_password">密码不能为空</string>
	<string name="login_error_password_require">密码为6–20位字符(不含空格)，请重新输入</string>
	<string name="register_error_msm_null">验证码不能为空</string>
	<string name="register_error_msm_format">验证码为5–6位数字</string>
	<string name="register_error_msm">验证码不对,请重新输入</string>
	<string name="login_checked_code">验证码</string>
	<string name="login_checked_code_hint">5–6位数字</string>
	<string name="login_get_code">获取验证码</string>
	<string name="login_ensure_txt">确定</string>
	<string name="alter_oldpwd_txt">原密码不正确,请重新输入</string>
	<string name="alter_surepwd_txt">新密码和确认密码不一致,请重新输入</string>
	<string name="message_code_send">验证码已成功发送到您手机，请注意查收！</string>
	
	
	<!-- 密码输入验证规则 -->
    <string name="digits_verify">`-=[]\;,./~!@#$%^*()_+}{:?&amp;&lt;&gt;&quot;&apos;0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <!-- 用户名输入规则 -->
    <string name="digits_verify_name">0123456789</string>
    
    <!-- 我的账号字符-->
	<string name="account_register_txt">注册账号</string>
	<string name="account_register_date_txt">注册时间</string>
	<string name="account_register_phone_txt">手机绑定:</string>
	<string name="account_login_password_txt">登陆密码:</string>
	<string name="account_alter_password_txt">修改密码</string>
	<string name="accout_exit_login">退出登录</string>
	<!-- 我的资料字符 -->
	<string name="person_name_txt">名字&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
	<string name="person_sex_txt">性别&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
	<string name="person_id_card_txt">身份证&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
	<string name="person_phone_txt">手机号码&#160;&#160;&#160;&#160;</string>
	<string name="person_error_name_require">名字不能为空</string>
	<string name="person_error_sex_require">性别不能为空</string>
	<string name="person_error_id_card_require">身份证号码不能为空</string>
	<string name="person_error_id_card">身份证号码格式错误</string>
	<!--修改密码字符  -->
	<string name="alter_old_password_txt">&#160;&#160;&#160;&#160;旧密码:</string>
	<string name="alter_new_password_txt">&#160;&#160;&#160;&#160;新密码:</string>
	<string name="alter_sure_password_txt">确认密码:</string>
	<string name="alter_old_password_hint">请输入旧密码</string>
	<string name="alter_new_password_hint">请输入新密码</string>
	<string name="alter_sure_password_hint">请确认密码</string>
	<!-- 修改手机 字符 -->
	<string name="alter_new_phone_txt">新号码:</string>
	<string name="alter_phone_vode_txt">验证码:</string>
	<string name="alter_new_phone_hint">请输入手机号码</string>
	<string name="alter_phone_vode_hint">5–6位数字</string>
    <!-- 错误提示 -->
    <string name="httpError">未找到服务器，请检查网络是否连接</string>
    <string name="httpisNull">您好像未连接网络，请尝试连接</string>
    <string name="simisNull">请插入SIM卡</string>
    <!--用户车票订单  -->
    <string name="person_order_num">票数 :&#160;&#160;&#160;</string>
    <string name="person_order_pay">立即支付</string>
    <string name="person_order_success">订票成功</string>
    <string name="person_order_fail">订票失败</string>
    <string name="person_order_exception">订票异常</string>
    
    <!-- 加载提示提示 -->
    <string name="httpLoading">正在加载</string>
    
    <!-- 网络请求失败界面 -->
    <string name="http_fail_hint">网络不可用</string>
    <string name="http_fail_hint1">请开启移动网络或者wifi</string>
    <string name="http_fail_click">点击屏幕&#160;&#160;进行刷新</string>
   
      <!-- 上拉下拉 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <!-- pulltorefresh -->
    <string name="pull_to_refresh_pull_labe">下拉刷新…</string>
    <string name="pull_to_refresh_release_labe">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_labe">正在载入…</string>
    <string name="pull_to_refresh_from_bottom_pull_labe">@string/pull_to_refresh_pull_labe</string>
    <string name="pull_to_refresh_from_bottom_release_labe">@string/pull_to_refresh_release_labe</string>
    <string name="pull_to_refresh_from_bottom_refreshing_labe">@string/pull_to_refresh_refreshing_labe</string>
    <string name="pull_to_refresh_pull_label" translatable="false">向下拉动可以刷新</string>
    <string name="pull_to_refresh_release_label" translatable="false">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label" translatable="false">加载中&#8230;</string>
    <string name="pull_to_refresh_tap_label" translatable="false">点击刷新</string>
    
    
    <!-- 银联支付插件 -->
    <string name="umspay_app_name">全民捷付</string>
    <string name="umspay_menu_settings">Settings</string>
    <string name="umspay_keyboard_clear">清除</string>
    <string name="umspay_keyboard_number">数字</string>
    <string name="umspay_keyboard_letter">字母</string>
    <string name="umspay_keyboard_symbol">符号</string>
    <string name="umspay_affirm">确认</string>
    <string name="umspay_splash_version">版本1.0.0</string>
    <string name="umspay_splash_info">中国银联股份有限公司版权所有</string>
    
    <!-- 友盟意见反馈 -->
    <string name="umeng_fb_powered_by">Powered by</string>
</resources>
