<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <include layout="@layout/include_title" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/maintab_view_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/person_view_none_selector"
        android:padding="5dp" >

        <TextView
            android:id="@+id/alter_new_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:text="@string/alter_new_phone_txt"
            android:textColor="@color/person_info_txt"
            android:textSize="@dimen/font_16" />

        <EditText
            android:id="@+id/bind_new_phone_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/alter_new_phone"
            android:background="@null"
            android:digits="@string/digits_verify_name"
            android:hint="@string/alter_new_phone_hint"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:textSize="@dimen/font_16" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/bind_sms_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="11dp"
            android:background="@drawable/ticket_btn_blue_bg_selector"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="8dp"
            android:text="@string/login_get_code"
            android:textColor="@color/font_color_white"
            android:textSize="@dimen/font_15" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:layout_toLeftOf="@id/bind_sms_tv"
            android:background="@drawable/person_view_none_selector"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                style="@style/persion_info_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/alter_phone_vode_txt"
                android:textColor="@color/person_info_txt"
                android:textSize="@dimen/font_16" />

            <EditText
                android:id="@+id/bind_msm_vode_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:digits="@string/digits_verify"
                android:hint="@string/alter_phone_vode_hint"
                android:inputType="number"
                android:maxLength="6"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:textSize="@dimen/font_16" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/bind_phone_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ticket_btn_blue_bg_selector"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login_ensure_txt"
        android:textColor="@color/font_color_white"
        android:textSize="@dimen/font_20" />

</LinearLayout>