<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <include layout="@layout/include_title" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/maintab_view_line" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/person_view_none_selector"
        android:orientation="vertical"
        android:padding="1dp" >

        <RelativeLayout
            android:id="@+id/accout_alter_phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/p_m_layout_padding" >

            <TextView
                android:id="@+id/alter_old_pwd_txt"
                style="@style/persion_info_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/p_m_tv_padding"
                android:text="@string/alter_old_password_txt" />

            <EditText
                android:id="@+id/alter_old_pwd_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/alter_old_pwd_txt"
                android:background="@null"
                android:digits="@string/digits_verify"
                android:hint="@string/alter_old_password_hint"
                android:inputType="textPassword"
                android:maxLength="20"
                android:minEms="6"
                android:singleLine="true"
                android:textSize="@dimen/font_16" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/person_view_none_selector"
        android:orientation="vertical"
        android:padding="1dp" >

        <RelativeLayout
            android:id="@+id/accout_alter_phone1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/p_m_layout_padding" >

            <TextView
                android:id="@+id/alter_new_pwd_txt"
                style="@style/persion_info_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/p_m_tv_padding"
                android:text="@string/alter_new_password_txt" />

            <EditText
                android:id="@+id/alter_new_pwd_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/alter_new_pwd_txt"
                android:background="@null"
                android:digits="@string/digits_verify"
                android:hint="@string/alter_new_password_hint"
                android:inputType="textPassword"
                android:maxLength="20"
                android:minEms="6"
                android:singleLine="true"
                android:textSize="@dimen/font_16" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/person_view_none_selector"
        android:orientation="vertical"
        android:padding="1dp" >

        <RelativeLayout
            android:id="@+id/account_alter_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/p_m_layout_padding" >

            <TextView
                android:id="@+id/alter_pwd_sure_tv"
                style="@style/persion_info_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/p_m_tv_padding"
                android:text="@string/alter_sure_password_txt" />

            <EditText
                android:id="@+id/alter_pwd_sure_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/alter_pwd_sure_tv"
                android:background="@null"
                android:digits="@string/digits_verify"
                android:hint="@string/alter_sure_password_hint"
                android:inputType="textPassword"
                android:maxLength="20"
                android:minEms="6"
                android:singleLine="true"
                android:textSize="@dimen/font_16" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/alter_pwd_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ticket_btn_blue_bg_selector"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login_ensure_txt"
        android:textColor="@color/font_color_white"
        android:textSize="@dimen/font_20" />

</LinearLayout>